--- a/input-note.css
+++ b/input-note.css
@@ -14,6 +14,9 @@
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .input-note{
@@ -23,8 +26,8 @@
     background-color: white;
     border-radius: 10px;
     position: fixed;
-    top: 10%;
-    left: 35%;
+    /* top: 10%;
+    left: 35%; */
     padding: 30px 30px 10px 30px;
 }
 
